external-crates/move/crates/move-compiler/tests/move_check/unit_test/expected_failure_invalid_literals@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_invalid_literals.move:14:35
   │
14 │     #[expected_failure(abort_code=0u8, location=0x1::M)]
   │                                   ^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_invalid_literals.move:18:35
   │
18 │     #[expected_failure(abort_code=0u128, location=0x1::M)]
   │                                   ^^^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant
